--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": ">=8.0 <8.3",
+        "php": "^7.2.5 || ^8.0",
         "guzzlehttp/guzzle": "^7.3",
         "spatie/guzzle-rate-limiter-middleware": "^2.0"
     },
