--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "^7.2.5 || ^8.0",
+        "php": "^7.1.3",
         "guzzlehttp/guzzle": "^6.3",
         "spatie/guzzle-rate-limiter-middleware": "^2.0"
     },
