--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pamekar/constantcontact",
+    "name": "faixan23/constantcontact",
     "description": "Object Oriented Wrapper for Constant Contact API V3",
     "minimum-stability": "stable",
     "keywords": ["Constant", "Contact", "API", "V3", "Object Oriented", "Object-Oriented"],
